# rust-stb-vorbis

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: decode_filename.rs  decode_frame_pushdata.rs  get_samples_float_interleaved.rs  get_samples_short_interleaved.rs
src/: helper.rs  lib.rs  stb_vorbis.c
tests/: compare.py  compare2.py  note.txt
