[package]
name = "stb_vorbis"
version = "0.1.0"
authors = ["Gigih Aji Ibrahim <bungcip@gmail.com>"]
description = "A straight translation of the stb_vorbis.c from C to Rust."
exclude = ["tests/*"]
license = "MIT"
keywords = ["audio", "ogg", "vorbis", "decoder"]

[dependencies]
smallvec = "0.1.8"
clippy = {version = "*", optional = true}

[features]
default = ["clippy"]